--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "http-errors": "^2.0.0",
     "mongo": "^0.1.0",
     "mongoose": "^6.4.1"
   }
